--- a/home.html
+++ b/home.html
@@ -24,7 +24,7 @@
         }
         .xianjing{
             background-color: #fff4ec;
-            padding: 15px;
+            padding: 10px 15px;
             color: #ff9446;
         }
         .icon-tips{
@@ -64,16 +64,20 @@
 <body style="background-color: #f4f6f6">
 <div class="flex-list2 alignCenter border_x">
     <div class="avt" onclick="window.location='userCenter/index.html'">
-        <span><img src="static/images/user-def.png" width="40" height="40"></span>蕾同
+        <span><img src="static/images/user-def.png" width="40" height="40"></span>*慧
     </div>
     <div class="flex text-right" onclick="window.location='pay_record.html'">支付记录<i class="arrow_2"></i></div>
 </div>
 <div class="space15 border_x"></div>
-<div class="home_tips border_x">
-    <p>健康银包已为你节省</p>
-    <p><span class="cost">230</span> 元</p>
+<div class="border_x">
+    <img src="static/images/p1/p6.jpg"  width="100%" height="auto" style="display: block;margin: 0 auto">
 </div>
-<div class="xianjing border_x"><i class="icon-tips"></i>点击领取30元健康代金卷！ </div>
+<div class="xianjing border_x"><i class="icon-tips"></i>点击领取30元健康代金券！ </div>
+<!--<div class="home_tips border_x">-->
+    <!--<p>健康银包已为你节省</p>-->
+    <!--<p><span class="cost">230</span> 元</p>-->
+<!--</div>-->
+
 <div class="main_in">
     <div class="item">
         <a href="sceneJiuYi/index.html">
@@ -89,6 +93,7 @@
     </div>
 
 </div>
+
 
 </body>
 </html>
