--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 </div>
 <div class="space15"></div>
 <div>
-    <img src="static/images/p1/p2.jpg" width="100%">
+    <a href="home.html"><img src="static/images/p1/p2.jpg" width="100%"></a>
 </div>
 <div class="space15"></div>
 <div>
-    <img src="static/images/p1/p3.jpg" width="100%">
+    <a href="home.html"> <img src="static/images/p1/p3.jpg" width="100%"></a>
 </div>
 
 </body>
