--- a/pay_ok.html
+++ b/pay_ok.html
@@ -16,16 +16,16 @@
     <ul id="weixin-list">
         <!--<li class="li-time"><span>2016年3月22日10:17</span></li>-->
         <li class="box-list">
-            <h2>待缴费通知 <br/><span class="time">5月27日</span></h2>
+            <h2>待缴费通知 <br/><span class="time">5月30日</span></h2>
 
             <p class="des">
                 <span>你好！你有一项新的待缴费项目。</span><br/>
                 就诊人：<span>*慧</span><br/>
-                卡号：<span>62****565</span><br/>
+                <!--卡号：<span>62****565</span><br/>-->
                 就诊医院：<span>广东省中医院</span><br/>
                 缴费类型：门诊缴费 <br/>
                 缴费金额：190元 <br/>
-                <span>使用微信支付，有效减小排队等候时间，无需手续费。</span><br/>
+                <span>使用健康银包支付，有效减小排队等候时间，无需手续费。</span><br/>
             </p>
             <a class="more" href="querenzhifu.html"><span>详情</span><i class="iconfont">&#xe60c;</i></a>
         </li>
