--- a/sceneJiuYi/guaHaoDoctocInfo.html
+++ b/sceneJiuYi/guaHaoDoctocInfo.html
@@ -34,8 +34,6 @@
                     <!--擅长：诊治内分泌代谢病，如糖尿病及糖尿病肾病等并发症，-->
                     <!--<span class="moreCont">甲状腺、甲状旁腺、肾上腺、垂体、痛风、骨质疏松、电解质紊乱等疾病。<br/>详细介绍：医学博士，博士后，硕导。全国优秀中医临床人才，省千百十人才。中华中医药学会糖尿病分会委员，世中联糖尿病分会常委，省中西医结合学会高血压委员会常委。</span>-->
                     <!--<span class="more skinColor" onclick="doctorCart_show(this)">展开</span>-->
-
-
                 </div>
             </li>
         </ul>
@@ -46,7 +44,7 @@
             <li class="t-header-w">
                 <div class="t-header">
                     <div class="t-body"><i class="iconfont">&#xe602;</i></div>
-                    <div class="t-body js-dateNow"><!--2015-10-10--></div>
+                    <div class="t-body js-dateNow">2016-06-02</div>
                     <div class="t-body"><i class="iconfont">&#xe603;</i></div>
                     <!--<div class="dateView">切换日期<i class="iconfont">&#xe61d;</i></div>-->
                 </div>
@@ -138,16 +136,16 @@
         }
     }
 
-    $(function(){
-        function getToday(){
-            var myDate = new Date();
-            var selTime = myDate.getFullYear() + '-';
-            selTime += (myDate.getMonth() + 1) + '-';
-            selTime += myDate.getDate();
-
-           // return selTime;
-            $('.js-dateNow').text(selTime);
-        }
-        getToday();
-    })
+//    $(function(){
+//        function getToday(){
+//            var myDate = new Date();
+//            var selTime = myDate.getFullYear() + '-';
+//            selTime += (myDate.getMonth() + 1) + '-';
+//            selTime += myDate.getDate();
+//
+//           // return selTime;
+//            $('.js-dateNow').text(selTime);
+//        }
+//        getToday();
+//    })
 </script>
