--- a/userCenter/detail.html
+++ b/userCenter/detail.html
@@ -25,10 +25,10 @@
             <div class="name">姓名</div>
             <div class="mate">*慧</div>
         </li>
-        <li class="flex">
-            <div class="name">就诊卡号</div>
-            <div class="mate">61****62</div>
-        </li>
+        <!--<li class="flex">-->
+            <!--<div class="name">就诊卡号</div>-->
+            <!--<div class="mate">61****62</div>-->
+        <!--</li>-->
     </ul>
 
     <ul class="y-list">
@@ -46,7 +46,7 @@
         </li>
         <li class="flex">
             <div class="name">就诊时间</div>
-            <div class="mate">2016-05-27</div>
+            <div class="mate">2016-05-30</div>
         </li>
         <li class="flex">
             <div class="name">流水号</div>
