--- a/userCenter/index.html
+++ b/userCenter/index.html
@@ -47,13 +47,13 @@
                     <i class="iconfont icon-woman">&#xe60b;</i>
                     <!--<i class="iconfont icon-man">&#xe60a;</i>-->
                 </div>
-                <div class="des">就诊卡：61***62</div>
+                <!--<div class="des">就诊卡：61***62</div>-->
             </div>
         </li>
-        <li class="arrow" onclick="window.location='myFamily.html'">
-            <i class="iconfont icon-usercenter">&#xe609;</i>
-            <span class="userText">我的家人</span>
-        </li>
+        <!--<li class="arrow" onclick="window.location='myFamily.html'">-->
+            <!--<i class="iconfont icon-usercenter">&#xe609;</i>-->
+            <!--<span class="userText">我的家人</span>-->
+        <!--</li>-->
         <li class="arrow" onclick="window.location='myDoctor.html'">
             <i class="iconfont icon-usercenter">&#xe60e;</i>
             <span class="userText">我的医生</span>
@@ -62,7 +62,7 @@
             <i class="iconfont icon-usercenter">&#xe60d;</i>
             <span class="userText">挂号记录</span>
         </li>
-        <li class="arrow" onclick="window.location='../pay_ok.html'">
+        <li class="arrow" onclick="window.location='pay_ok.html'">
             <i class="iconfont icon-usercenter">&#xe60d;</i>
             <span class="userText">缴费记录</span>
         </li>
