--- a/userCenter/myInfo.html
+++ b/userCenter/myInfo.html
@@ -47,22 +47,22 @@
        </li>
         <li class="flex">
             <div class="name">证件号</div>
-            <div class="mate">425154187912142521</div>
+            <div class="mate">425***********2521</div>
         </li>
         <li class="flex">
             <div class="name">手机号</div>
-            <div class="mate">18614562121</div>
+            <div class="mate">186****2121</div>
         </li>
-        <li class="flex">
-            <div class="name">卡号</div>
-            <div class="mate">61***62</div>
-        </li>
-        <li class="flex">
-            <div class="name">邮寄地址</div>
-            <div class="mate"></div>
-        </li>
+        <!--<li class="flex">-->
+            <!--<div class="name">卡号</div>-->
+            <!--<div class="mate">61***62</div>-->
+        <!--</li>-->
+        <!--<li class="flex">-->
+            <!--<div class="name">邮寄地址</div>-->
+            <!--<div class="mate"></div>-->
+        <!--</li>-->
     </ul>
-    <button type="button" class="btn btn-remove btn-block">解除绑定</button>
+    <!--<button type="button" class="btn btn-remove btn-block">解除绑定</button>-->
 </div>
 </body>
 </html>
