--- a/bindID.html
+++ b/bindID.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="x-rim-auto-match" content="none">
-    <title>绑定帐号</title>
+    <title>开通健康银包</title>
     <link rel="stylesheet" href="static/css/style.css"/>
     <style>
         .logoIcon{
@@ -46,16 +46,38 @@
         .btn-warp a:hover{
             background-color: #00a5e0;
         }
+        .info{
+            margin: 1px 0;
+            padding-left: 12px;
+            box-sizing: border-box;
+            line-height: 22px;
+            font-size: 12px;
+            color: #666;
+        }
+        .info.fore{
+            margin-top: 15px;
+            font-size: 14px;
+        }
     </style>
 </head>
 <body>
 <div>
     <div class="main">
         <div><i class="logoIcon"></i></div>
-        <p>健康银包由医享网开发<br/>绑定账号即可继续操作</p>
+        <p>健康银包提供医保先付、商保直赔、<br/>大病融资、积分兑现、联合国际医学会诊服务</p>
     </div>
-    <p class="agree-warp"><input type="checkbox" name="" id="agree"><label for="agree">获得你的公开信息（昵称、头像等）</label></p>
-    <p class="btn-warp"><a href="home.html" class="btn btn-block btn-ok">确认绑定</a></p>
+
+    <p class="info fore">确认及填写个人信息</p>
+    <p class="info">姓　　名：陈慧</p>
+    <p class="info">手　　机：18614562121</p>
+    <p class="info">证件类型：身份证</p>
+    <p class="info">证件号码：425154197912142521</p>
+    <p class="info" style="color:#f0a92c; font-size: 12px;">信息有误，点击修改</p>
+
+    <p class="agree-warp"><input type="checkbox" name="" id="agree"><label for="agree">同意注册健康银包开通就医直赔</label></p>
+    <p class="info" style="color:#888; font-size: 12px;">健康银包现已与全国55家大型三甲医院 * 合作，提供在线挂号、诊间支付、住院一日清单查询等服务。</p>
+    <div style="font-size: 12px;padding: 0 10px;color: #888 ">* 医院数量统计截至5月25日</div>
+    <p class="btn-warp"><a href="home.html" class="btn btn-block btn-ok">确认</a></p>
 </div>
 
 </body>
