--- a/sceneJiuYi/guaHaoPay.html
+++ b/sceneJiuYi/guaHaoPay.html
@@ -14,68 +14,73 @@
     <script src="../static/js/lib/fastclick.min.js" type="text/javascript"></script>
     <script src="../sceneJiuYi/static/js/common.js" type="text/javascript"></script>
 </head>
+<style>
+    .w120{
+        width: 100px;
+    }
+</style>
 <body>
 <div id="body">
     <div id="guoHao">
             <ul class="yx-list">
                 <li class="flex">
-                    <div class="flexItem w120">挂号费</div>
+                    <div class="w120">挂号费</div>
                     <div class="color666 flexItem textRight">
                         <span class="price">4.00</span> 元
                     </div>
                 </li>
                 <li class="flex">
-                    <div class="flexItem w120">科室</div>
+                    <div class=" w120">科室</div>
                     <div class="color666 flexItem textRight">内科</div>
                 </li>
                 <li class="flex">
-                    <div class="flexItem w120">医生</div>
+                    <div class=" w120">医生</div>
                     <div class="color666 flexItem textRight">邓忠明（主治医师）</div>
                 </li>
                 <li class="flex">
-                    <div class="flexItem w120">就诊时间</div>
-                    <div class="color666 flexItem textRight"><span class="js-dateNow"></span> 10:00-10:30</div>
+                    <div class=" w120">就诊时间</div>
+                    <div class="color666 flexItem textRight"><span class="js-dateNow">2016-06-02</span> 10:00-10:30</div>
                 </li>
             </ul>
-        <div class="add-jiuZhenRen">
-            <div class="page-title">选择就诊人</div>
-            <div class="radio-list">
-                <!--<ul class="yx-list">-->
-                    <!--<li class="color999">还没有就诊人<button type="button" class="btn btn-bingka">一键绑卡</button></li>-->
-                    <!--<li class="color999">您还没有添加就诊人，请先添加</li>-->
-                    <!--<li class="addPeople">-->
-                        <!--<div class="skinColor"><i class="iconfont">&#xe60e;</i>添加就诊人</div>-->
-                    <!--</li>-->
-                <!--</ul>-->
+        <!--<div class="add-jiuZhenRen">-->
+            <!--<div class="page-title">选择就诊人</div>-->
+            <!--<div class="radio-list">-->
+                <!--&lt;!&ndash;<ul class="yx-list">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li class="color999">还没有就诊人<button type="button" class="btn btn-bingka">一键绑卡</button></li>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li class="color999">您还没有添加就诊人，请先添加</li>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li class="addPeople">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="skinColor"><i class="iconfont">&#xe60e;</i>添加就诊人</div>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</li>&ndash;&gt;-->
+                <!--&lt;!&ndash;</ul>&ndash;&gt;-->
 
-                <ul class="yx-list">
-                    <li class="flex active">
-                        <div class="flexItem w120"><i class=" icon-radio"></i>*慧</div>
-                        <div class="color666 flexItem textRight">425154********2521</div>
-                    </li>
-                    <!--<li class="flex">-->
-                        <!--<div class="flexItem w120"><i class=" icon-radio"></i>*明芳</div>-->
-                        <!--<div class="color666 flexItem textRight">422562********0321</div>-->
-                    <!--</li>-->
-                    <!--<li class="flex disable">-->
-                        <!--<div class="flexItem w120"><i class=" icon-radio"></i>*明芳</div>-->
-                        <!--<div class="color666 flexItem textRight">422562********0321</div>-->
-                    <!--</li>-->
-                    <!--<li class="li-add">-->
-                        <!--<div class="skinColor"><i class="iconfont">&#xe60e;</i></div>-->
-                    <!--</li>-->
-                </ul>
-            </div>
-            <!--<div class="space15"></div>-->
-            <!--<div class="switch">-->
                 <!--<ul class="yx-list">-->
-                    <!--<li class="flex">-->
-                        <!--<div class="flexItem">是否支付挂号费</div>-->
-                        <!--<div class="flexItem w100 textRight"><label><input class="mui-switch" type="checkbox"></label> </div>-->
+                    <!--<li class="flex active">-->
+                        <!--<div class="flexItem w120"><i class=" icon-radio"></i>*慧</div>-->
+                        <!--<div class="color666 flexItem textRight">425154********2521</div>-->
                     <!--</li>-->
+                    <!--&lt;!&ndash;<li class="flex">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="flexItem w120"><i class=" icon-radio"></i>*明芳</div>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="color666 flexItem textRight">422562********0321</div>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</li>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li class="flex disable">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="flexItem w120"><i class=" icon-radio"></i>*明芳</div>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="color666 flexItem textRight">422562********0321</div>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</li>&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li class="li-add">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="skinColor"><i class="iconfont">&#xe60e;</i></div>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</li>&ndash;&gt;-->
                 <!--</ul>-->
             <!--</div>-->
-        </div>
+            <!--&lt;!&ndash;<div class="space15"></div>&ndash;&gt;-->
+            <!--&lt;!&ndash;<div class="switch">&ndash;&gt;-->
+                <!--&lt;!&ndash;<ul class="yx-list">&ndash;&gt;-->
+                    <!--&lt;!&ndash;<li class="flex">&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="flexItem">是否支付挂号费</div>&ndash;&gt;-->
+                        <!--&lt;!&ndash;<div class="flexItem w100 textRight"><label><input class="mui-switch" type="checkbox"></label> </div>&ndash;&gt;-->
+                    <!--&lt;!&ndash;</li>&ndash;&gt;-->
+                <!--&lt;!&ndash;</ul>&ndash;&gt;-->
+            <!--&lt;!&ndash;</div>&ndash;&gt;-->
+        <!--</div>-->
         <div class="btn-w">
             <button class="btn btn-block btn-ok" onclick="go('guaHaoPayConfirm.html')" >确定挂号</button>
 
@@ -128,16 +133,16 @@
 //     })
 
 
-    $(function(){
-        function getToday(){
-            var myDate = new Date();
-            var selTime = myDate.getFullYear() + '-';
-            selTime += (myDate.getMonth() + 1) + '-';
-            selTime += myDate.getDate();
-
-            // return selTime;
-            $('.js-dateNow').text(selTime);
-        }
-        getToday();
-    })
+//    $(function(){
+//        function getToday(){
+//            var myDate = new Date();
+//            var selTime = myDate.getFullYear() + '-';
+//            selTime += (myDate.getMonth() + 1) + '-';
+//            selTime += myDate.getDate();
+//
+//            // return selTime;
+//            $('.js-dateNow').text(selTime);
+//        }
+//        getToday();
+//    })
 </script>
