--- a/userCenter/wallet1.html
+++ b/userCenter/wallet1.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="x-rim-auto-match" content="none">
-    <title>健康钱包</title>
+    <title>健康银包</title>
     <link rel="stylesheet" href="../static/css/style.css"/>
     <script src="../static/js/lib/zepto.min.js" type="text/javascript"></script>
     <script src="../static/js/lib/fastclick.min.js" type="text/javascript"></script>
@@ -16,14 +16,14 @@
 <body class="bg-gray">
 <div id="header">
     <span class="return" onclick="window.location='index.html'"><i class="iconfont">&#xe600</i>返回</span>
-    <h2>健康钱包</h2>
+    <h2>健康银包</h2>
     <span class="menu"></span>
 </div>
 <div class="userCenterBox">
     <ul class="y-list">
         <li class="flex" onclick="window.location='../record.html'">
             <div class="mate detail">
-                <span class="block">健康钱包已为你节省</span>
+                <span class="block">健康银包已为你节省</span>
                 <span class="block"><span class="yellow">249.00</span>元</span>
             </div>
         </li>
