--- a/zhifuChenggong.html
+++ b/zhifuChenggong.html
@@ -33,7 +33,7 @@
             </li>
             <li>
                 <div class="label">交易时间</div>
-                <div class="text">2016-05-27 10:32:22</div>
+                <div class="text">2016-05-30 14:10:25</div>
             </li>
             <li>
                 <div class="label">支付方式</div>
@@ -46,7 +46,7 @@
         </ul>
     </div>
     <div style="margin: 15px;">
-     <div class="btn btn-ok btn-block" onclick="window.location='home.html'">确认</div>
+     <div class="btn btn-ok btn-block" onclick="window.location='home.html'">返回</div>
     </div>
 
 </body>
