--- a/bindID.html
+++ b/bindID.html
@@ -75,7 +75,7 @@
     <p class="info" style="color:#f0a92c; font-size: 12px;">信息有误，点击修改</p>
 
     <p class="agree-warp"><input type="checkbox" name="" id="agree"><label for="agree">同意注册健康银包开通就医直赔</label></p>
-    <p class="info" style="color:#888; font-size: 12px;">健康银包现已与全国55家大型三甲医院 * 合作，提供在线挂号、诊间支付、住院一日清单查询等服务。</p>
+    <p class="info" style="color:#888; font-size: 12px;">健康银包现已与全国55家大型三甲医院合作，提供在线挂号、诊间支付、住院一日清单查询等服务。</p>
     <div style="font-size: 12px;padding: 0 10px;color: #888 ">* 医院数量统计截至5月25日</div>
     <p class="btn-warp"><a href="home.html" class="btn btn-block btn-ok">确认</a></p>
 </div>
