--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
 </div>
 <div class="space15 border_x"></div>
 <div class="border_x">
-    <img src="static/images/p1/p6.jpg"  width="100%" height="auto" style="display: block;margin: 0 auto">
+    <a href="sceneJiuYi/index.html"><img src="static/images/p1/p6.jpg"  width="100%" height="auto" style="display: block;margin: 0 auto"></a>
 </div>
 <div class="xianjing border_x"><i class="icon-tips"></i>点击领取30元健康代金券！ </div>
 <!--<div class="home_tips border_x">-->
@@ -82,18 +82,15 @@
     <div class="item">
         <a href="sceneJiuYi/index.html">
             <i class="icon_in icon_in_one"></i>
-            <span>现场就医</span>
+            <span style="line-height: 45px">现场就医</span>
         </a>
     </div>
     <div class="item">
         <a href="http://remote.yx129.com/Mobile/Index/index?appid=wx55dc449c8afc481c&openid=oKoR4v6TsgrsBj1KQYPx5waMLWok">
             <i class="icon_in icon_in_two"></i>
-            <span>远程会诊</span>
+            <span>联合国际<br/>医学会诊</span>
         </a>
     </div>
-
 </div>
-
-
 </body>
 </html>
